45.1
=======

- Fix sandbox for image decoding not enabled by default
- Fix printing on different printer than selected
- Fix print dialog crashes on confirmation
- Fix print dialog needs second confirmation inside Flatpaks
- Fix SVGs sometimes not re-rendering for zoom level
- Fix animated image formats with variable frame length using only one length

45.0
=======

- Always ask which program to use for "Open With…"
- SVG: Force minimum tile size of 1000x1000
- SVG: Don't render first tiles with zoom=1
- Empty state: Use flat headerbar
- Fix non-native files with path cannot be deleted
- Update screenshots
- Drag and Drop: Only expect sources of type FileList
- Update SlidingView after removing unsupported image

45.beta.1
=======

- Reload images when the file is replaced by moving another file at it's place
- Update dependencies

45.beta
=======
- Newly designed print dialog
- Added sandboxing for SVG rendering by using glycin
- Use RaisedBorder for HeaderBar to avoid shadow over images
- Fix browsing images on SMB shares not working
- Fix touchscreen gestures not working when zoomed in
- Fix touchscreen swipe only working on second attempt
- Added JpegXL support via new glycin version
- Added overshoot for swipe gesture
- New custom style for drop targets
- Changed name to Image Viewer

45.alpha
=======
- Add help
- Disable trashing for non-native files
- Give toast for latest deleted file priority over the others
- Only list supported image formats in file chooser
- Do not guess a potentially different background color for opaque images
- Fix incorrect updates when deleting or changing images
- Fix SVG zooming with high-res scroll-wheels
- Use glycin for sandboxed extendable image loading expect for SVG
- Remove backspace as a trash shortcut
- Change command line to open all given images in one window
- Do not show "Set as Background" if operation was aborted
- Let the user select multiple files to open in file chooser
- Support forward and back mouse buttons